VueRange n'est plus rechargée à chaque fois + icones + message erreurs range non trouvée